[tool.poetry]
name = "pydfirram"
version = "0.2.0"
description = ""
authors = [
    "Braguette <alexis.debrito@ecole2600.com>",
    "std3 <67806187+standard3@users.noreply.github.com>",
]

[tool.poetry.dependencies]
python = "^3.10"
volatility3 = "^2.5.2"
pandas = "^2.2.2"
regex = "^2024.4.28"
graphviz = "^0.20.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6"
mkdocs-material = "^9.5"
mkdocs-git-revision-date-localized-plugin = "^1.2"
mkdocs-git-committers-plugin-2 = "^2.3"
mkdocstrings = "^0.25"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
