[tool.poetry]
name = "pydfirram"
version = "1.0.0"
description = "A Python library for memory forensics tasks."
authors = [
    "Braguette <alexis.debrito@ecole2600.com>",
    "std3 <67806187+standard3@users.noreply.github.com>",
]
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
regex = "^2024.4.28"
graphviz = "^0.20.3"
loguru = "^0.7.2"
jupyter = "^1.0.0"
mike = { version="^1.1.2", optional=true}


# special handling for the main dependency 'volatility3' which requires to
# build the package manually since it is not actively maintained in PiPy. But
# some commits and updates are often pushed in the original repository. So,
# it is better to use the most recent source base and to build it manually.
#
# @notes
# - the package exposes a `pyproject.toml` that is supported by `poetry` BUT
#   the dependencies installed are the minimum required ones for the package
#   to work. Nevertheless, in our case, we need to install all dependencies
#   to enable the plugin part of the framework
# - since the volatility project uses the special "dynamic" feature from
#   `setuptools` which is not supported by `poetry`, we need to install
#   missed dependencies manually (this is a copy of the original
#   `requirements.txt` from volatility repository).

yara-python  = '^3.8.0'
capstone     = '^3.0.5'
pycryptodome = '*'
leechcorepyc = '^2.4.0'
gcsfs        = '^2023.1.0'
s3fs         = '^2023.1.0'

[tool.poetry.dependencies.volatility3]
git             = 'https://github.com/volatilityfoundation/volatility3'
branch          = 'develop'


[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = [
    "tox", "pre-commit", "virtualenv", "pip", "twine", "toml",
    "pandas-stubs",
]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs",
    "mike",
    "setuptools"
    ]

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6"
mkdocs-material = "^9.5"
mkdocs-git-revision-date-localized-plugin = "^1.2"
mkdocs-git-committers-plugin-2 = "^2.3"
mkdocstrings = "^0.25"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
